# grits-ros-pkg

./: README.md
ardrone/ardrone_driver/: CMakeLists.txt  package.xml
ardrone/ardrone_driver/include/: ARDroneDriver.h
ardrone/ardrone_teleop/: CMakeLists.txt
ardrone/ardrone_teleop/include/: CursesKeymote.h
arduino/arduino_serial_port/: CMakeLists.txt
arduino/arduino_serial_port/include/: ArduinoSerialPort.h
arduino/arduino_usb_gameport/: CMakeLists.txt
dyndensity/dyndensity/: CMakeLists.txt  package.xml
dyndensity/dyndensity_controller/: CMakeLists.txt  package.xml
dyndensity/dyndensity_controller/config/: projector.vcg
dyndensity/dyndensity_controller/ext/dunavant/: dunavant.cpp
dyndensity/dyndensity_controller/ext/graham/: ConvexHull.h  convexhull.eps
dyndensity/dyndensity_controller/ext/voronoi/: VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h
dyndensity/dyndensity_controller/include/: DynamicDensityControl.h
dyndensity/dyndensity_controller/launch/: CVTControl12.launch  dyndensity_ctrl.launch  optitrack.launch
dyndensity/dyndensity_controller/src/: CVTControl12.cpp  CommunicationProtocol.cpp  DynamicDensityControl.cpp  VoronoiDiagramGenerator.cpp  displayVoronoi.cpp  displayer.cpp  points_and_lines.cpp  tracker.cpp
dyndensity/dyndensity_controller/src/dunavant/: application.cpp
dyndensity/dyndensity_controller/src/graham/: ConvexHull.h  ConvexHullEPSWriter.h  GSCHDemo  GSCHDemo.cpp  GSCHDemo.cpp~  GrahamScanConvexHull.cpp  GrahamScanConvexHull.h  Makefile
dyndensity/launch/: dyndensity_ctrl.launch  optitrack.launch
khepera3/khepera3_controller/: CMakeLists.txt
khepera3/khepera3_driver/: CMakeLists.txt  package.xml
khepera3/khepera3_driver/include/: Khepera3Driver.h  Khepera3DriverAngularOrientedNode.h  Khepera3DriverService.h
khepera3/khepera3_driver/msg/: UnicycleControlInput.msg
khepera3/khepera3_driver/src/: Khepera3Driver.cpp  Khepera3DriverAngularOriented.cpp  Khepera3DriverAngularOrientedNode.cpp  Khepera3DriverService.cpp
khepera3/khepera3_odometry/: CMakeLists.txt
python_khepera/: control.launch  optitrack.launch  pyton_khepera.py
vicon/vicon_driver/: CMakeLists.txt
